[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "custom_mcp_files"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12,<3.14"
authors = [
    { name = "Mehmet Oktay Ozsoy", email = "ozsoymehmetoktay@gmail.com" }
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]



[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=8.4.1",
    "ruff>=0.14.10",
    "ty>=0.0.7",
]
